# agent-testbench

./: .env.example  .gitignore  CLAUDE.md  MEMORY.md  Makefile  PROJECT_BRIEF.md  TODO.md  compose.yaml  status.yaml
api/: .coverage  .env.example  Dockerfile  app.py  pyproject.toml
api/src/api/: __init__.py  db.py
api/src/api/routes/: runs.py  suite_runs.py
api/tests/: test_health.py  test_runs.py  test_suite_runs.py
bench/: baseline.yaml  example.yaml  run.py
cli/: .env.example  Makefile  go.mod  main.go  pyproject.toml
cli/cmd/: record.go  root.go
cli/internal/client/: client.go  client_test.go
cli/src/cli/: main.py
db/migrations/: 001_create_runs.sql  002_add_grading_columns.sql  003_add_suite_support.sql  004_add_output_text.sql
docs/: Architecture.md  Implementation.md  Requirements.md  Tech-Stack.md
docs/reviews/: grok-review-2026-05-25.md  project-review-2026-05-25.md
harness/: .coverage  .env.example  pyproject.toml
harness/src/harness/: grader.py  recorder.py  runner.py  scenario.py  suite_runner.py
harness/tests/: test_grader.py  test_recorder.py  test_runner.py  test_scenario.py  test_suite_runner.py
scenarios/: example-hello-world.md
tests/: Dockerfile  pyproject.toml
tests/integration/: conftest.py  test_health.py  test_runs.py
tests/smoke/: smoke.sh
web/: Dockerfile  package-lock.json  package.json  server.js  vite.config.ts
web/src/: index.css
web/src/__tests__/: App.test.tsx
web/src/components/ui/: badge.tsx  table.tsx
web/src/lib/: api.ts
web/src/pages/: RunDetail.tsx  RunsList.tsx
