[project]
name = "testbench-api"
version = "0.1.0"
description = "Agent Testbench REST API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-flask>=1.3.0",
    "ruff>=0.15.14",
]
