[project]
name = "testbench-harness"
version = "0.1.0"
description = "Agent Testbench harness — execute scenarios against AI agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
# subprocess-heavy runner functions (run_agent_scenario, _run_opencode_turn)
# require integration tests to cover; 65% is the realistic unit-test ceiling.
fail_under = 65
